--- a/css/contact.css
+++ b/css/contact.css
@@ -152,14 +152,14 @@ a {
   animation: line2 6s;
   animation-fill-mode: forwards;
   background: blue;
-  right: 530px;
+  left: 1000px;
 }
 
 .line5 {
   animation: line1 6s;
   animation-fill-mode: forwards;
   background: purple;
-  right: 240px;
+  left: 1280px;
 }
 
 button {
